--- a/src/ec/edu/ups/vista/VentanaPrincipal.form
+++ b/src/ec/edu/ups/vista/VentanaPrincipal.form
@@ -137,7 +137,7 @@
             </Container>
             <Component class="javax.swing.JButton" name="btnBuscar">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Buscar"/>
+                <Property name="text" type="java.lang.String" value="Desencriptar"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBuscarActionPerformed"/>
